fix two scrollbar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,3 @@
-mat-sidenav-container,
-mat-sidenav-content,
-mat-sidenav {
-  height: 100%;
-}
 mat-sidenav {
   width: 15vw;
 }
